--- a/src/components/job.module.scss
+++ b/src/components/job.module.scss
@@ -12,6 +12,8 @@
     color: $primary;
     text-transform: uppercase;
     display: inline;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
 .details {
