--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,16 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans|Roboto+Condensed&display=swap');
+
 $primary: #E40045;
 $secondary: #EE4C7D;
 $body: #282828;
 $caption: #8D8D8D;
-$light-background: #E3E2DE;
+$light-background: #F0EFEC;
 $white: #FFFFFF;
+
+$body-font: 'Nunito';
+$heading-font: 'Roboto Condensed';
 
 
 body {
-    font-family: sans-serif;
+    font-family: $body-font;
     font-size: 16px;
     margin: 0;
     color: $body;
     width: 100%;
     background: $light-background;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: $heading-font;
 }
