Added navigation to header component and added to layout component

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@ $white: #FFFFFF;
 $body-font: 'Nunito';
 $heading-font: 'Roboto Condensed';
 
+$link: 'color 0.3s ease';
 
 body {
     font-family: $body-font;
