--- a/src/components/title.module.scss
+++ b/src/components/title.module.scss
@@ -1,11 +1,19 @@
+@import '../styles/global';
+
 .container {
-    color: blue;
+    text-align: center;
 }
 
 .title {
     text-transform: uppercase;
+    font-size: 3rem;
+    color: $primary;
+    font-family: 'Permanent Marker', cursive;
 }
 
 .subtitle {
-    color: #8d8d8d;
+    color: $body;
+    font-weight: 600;
+    width: 500px;
+    margin: auto;
 }
