--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans|Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
 
 $primary: #E40045;
 $secondary: #EE4C7D;
@@ -23,4 +24,9 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: $heading-font;
+}
+
+* {
+    margin: 0;
+    padding: 0;
 }
