--- a/src/pages/resume.module.scss
+++ b/src/pages/resume.module.scss
@@ -1,14 +1,69 @@
 @import '../styles/global';
 
-.section {
+.heading {
     font-size: 0.8rem;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 2px;
     text-transform: uppercase;
     color: $secondary;
+    margin-bottom: 1rem;
 }
 
 .container {
-    background: $white;
-    margin: 5rem;
+    margin: 1.5rem auto;
+    padding: 1.5rem 2rem;
+    width: 520px;
+    background: white;
+    border-radius: 15px;
+}
+
+.section {
+    border-bottom: 1px solid #8d8d8d;
+    margin: auto;
+}
+
+
+.bulletList {
+    > li {
+        margin: 0.3rem 0;
+    }
+}
+
+.nav {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 100vh;
+    margin-left: 1rem;
+    position: fixed;
+    text-align: left;
+    
+}
+
+.icon {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    color: $body;
+    opacity: 0.6;
+    transition: $transition;
+}
+
+.icon:hover, .navLink:hover {
+    color: $primary;
+    opacity: 1;
+}
+
+.bulletList {
+    padding: 0 2.5rem;
+    width: 500px;
+}
+
+.navLink {
+    display: inline;
+    text-decoration: none;
+    color: $body;
+    opacity: 0.6;
+    transition: $transition;
 }
