--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -34,7 +34,7 @@
 }
 
 .subtitle {
-    grid-column: 2 / span 3;
+    grid-column: 2 / span 4;
     grid-row: 1;
     align-self: end;
     margin-left: 2rem;
@@ -42,9 +42,15 @@
     font-size: 2rem;
     letter-spacing: 2px;
     color: $primary;
+
+    @include respond-to(max-width, 963px) {
+		grid-column: 2 / span 6;
+    }
+
+
 }
 
 .portfolio {
-    height: 600px;
     width: 100vw;
 }
+
