--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,10 @@
 $primary: #E40045;
-$secondary: lighten($primary, 20%);
+$secondary: lighten($primary, 30%);
 $tertiary: #8D8D8D;
 $body: #282828;
-$light-background: #FAFAFA;
+$background: #FAFAFA;
+$light-background: #FFFFFF;
+$border: #EBEBEB;
+
+$black: #000000;
 $white: #FFFFFF;
