--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,10 +1,5 @@
 .container {
+    max-width: 100%;
     min-height: 100%;
-    display: grid;
-    grid-template-rows: 1fr auto;
 }
 
-.footer {
-    grid-row-start: 2;
-    grid-row-end: 3;
-  }
