--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,111 +1,6 @@
 @import '../styles/global';
 
-.container {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-
-    margin-top: 2rem;
-    height: 100vh;
-}
-
-.name {
-    text-transform: uppercase;
-    font-size: 5rem;
-    grid-column: 2 / span 5;
-    grid-row: 2 / span 3;
-    margin-left: 2rem;
-    
-
-    .lastName {
-        display: block;
-        line-height: 2.5rem;
-    }
-}
-
-.logo {
-    grid-column: span / 2;
-    grid-row: 2;
-    justify-self: end;
-
-    height: 200px;
-    border: none;
-}
-
-.subtitle {
-    grid-column: 2 / span 4;
-    grid-row: 2;
-    align-self: end;
-    margin-left: 2rem;
-    font-family: 'Permanent Marker', cursive;
-    font-size: 2rem;
-    letter-spacing: 2px;
-    color: $primary;
-
-    @include respond-to(max-width, 963px) {
-		grid-column: 2 / span 6;
-    }
-
-
-}
-
 .portfolio {
-    width: 100vw;
-    padding-top: 2rem;
-}
-
-.arrow {
-    grid-row: 5;
-    grid-column: 5 / span 6;
-    justify-self: center;
-    align-self: center;
-    @include clear-link;
-}
-
-.animation {
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); 
-    opacity: 1; 
-    width: 16px; 
-    height: 20px; 
-    right: 60px; 
-    bottom: 60px; 
-    z-index: 109; 
-    margin-right: 1rem;
-
-    
-    
-    animation-name: animation_6; 
-    animation-duration: 3.9s; 
-    animation-iteration-count: infinite; 
-    animation-direction: normal; 
-    animation-fill-mode: both; 
-    animation-play-state: running;
-
-    @keyframes animation_6 {
-        0%, 76.92307692307693% {transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1); opacity: 1; animation-timing-function: ease-out}
-        89.74358974358975% {transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,0,-30,0,1); opacity: 1; animation-timing-function: linear}
-        92.3076923076923% {transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,0,10,0,1); opacity: 1; animation-timing-function: ease-out}
-        100% {transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1); opacity: 1; }
-    }
-    
-}
-
-.caption {
-    text-transform: uppercase;
-    color: $primary;
-    font-weight: 900;
-    font-family: $heading-font;
-    font-size: 1.5rem;
-}
-
-
-.description {
-    grid-column: 2 / span 3;
-    grid-row: 3;
-    font-size: 1.5rem;
-    margin-left: 2rem;
-    line-height: 2.5rem;
+    padding: 1rem 5%;
 
 }
