--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,16 +9,32 @@ $body-font: 'Questrial', sans-serif;
 $heading-font: 'Roboto Condensed', sans-serif;
 $accent-font: 'Permanent Marker', serif;
 
+html {
+    font-size: 16px;
+    box-sizing: border-box;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    scroll-behavior: smooth;
+   
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+}
 
 body {
     font: {
         family: $body-font;
         size: 16px;
     }
-    margin: 0;
     color: $body;
     width: 100vw;
     background: $background;
+    margin: 0;
     
 }
 
@@ -26,14 +42,8 @@ h1, h2, h3, h4, h5, h6 {
     font-family: $heading-font;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    scroll-behavior: smooth;
+img {
+    max-width: 100%;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -42,6 +52,3 @@ html {
     }
 }
 
-p, li {
-    line-height: 2rem;
-}
