--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -28,6 +28,7 @@ a {
 
 .copyrightIcon {
     margin: auto 10px;
+    color: $primary;
 }
 
 .socialMedia {
@@ -37,4 +38,5 @@ a {
 .copyright {
     margin: 0;
     padding-bottom: 1rem;
+    font-size: 0.9rem;
 }
