--- a/src/components/job.module.scss
+++ b/src/components/job.module.scss
@@ -2,7 +2,7 @@
 
 .company {
     color: $body;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-weight: 700;
     text-transform: uppercase;
     display: inline;
@@ -16,11 +16,11 @@
 .role, .skillType{
     color: $primary;
     text-transform: uppercase;
-    display: inline;
+    display: block;
     font-size: 1.2rem;
     font-weight: 700;
-    margin-left: 0.5rem;
-    letter-spacing: 0;  
+    letter-spacing: 0; 
+    margin: 0; 
 }
 
 .details {
