--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -27,8 +27,10 @@
     }
 }
 
-@mixin respond-to($val, $query) { 
-	@media($val: $query) {
-		@content 
-	}
+@mixin card {
+    margin: 1.5rem 5%;
+    padding: 1rem;
+    background: white;
+    border: 0.5px solid $border;
+    @include rounded-corners(15px);
 }
