--- a/src/pages/resume.module.scss
+++ b/src/pages/resume.module.scss
@@ -1,10 +1,7 @@
 @import '../styles/global';
 
 .container {
-    margin: 1.5rem 5%;
-    padding: 1rem;
-    background: white;
-    @include rounded-corners(15px);
+    @include card;
 }
 
 .heading {
@@ -18,7 +15,6 @@
 .section {
     border-bottom: 1px solid $blue;
     margin: auto;
-
 }
 
 .bulletList {
