--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -8,6 +8,12 @@
     > * {
         color: $tertiary;
     }
+
+    @media only screen and (min-width: 600px) {
+        flex-flow: row nowrap;
+        justify-content: space-around;
+        align-items: center;
+    }
 }
 
 .icon {
@@ -15,9 +21,10 @@
     font-size: 2rem;
     color: $black;
     opacity: 0.2;
-
+    
     &:hover {
         opacity: 0.4;
+        cursor: pointer;
     }
 }
 
@@ -28,7 +35,6 @@ a {
 
 .copyrightIcon {
     margin: auto 10px;
-    color: $primary;
 }
 
 .socialMedia {
@@ -37,6 +43,10 @@ a {
 
 .copyright {
     margin: 0;
-    padding-bottom: 1rem;
     font-size: 0.9rem;
+}
+
+.button {
+    margin: 1.5rem auto;
+    text-align: center;
 }
