--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -2,25 +2,41 @@
 
 .container {
     width: 100vw;
+    @media only screen and (min-width: 1020px) {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .logo {
     display: none;
-    // TODO: ADD TO MEDIA QUERY
-    // height: 100%;
-    // opacity: 0.2;
-    // align-self: center;
-    // @include transition(opacity);
+    margin-left: 4rem;
+
+    @media only screen and (min-width: 1020px) {
+        display: block;
+        height: 4rem;
+        opacity: 0.2;
+        align-self: baseline;
+        @include transition(opacity);
+        
+        &:hover {
+            opacity: 0.9;
+        }
+    }
     
-    // &:hover {
-    //     opacity: 0.9;
-    // }
+    
 }
 
 .menu {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+
+    @media only screen and (min-width: 1020px) {
+        width: 50%;
+        justify-items: flex-end;
+        align-items: center;
+    }
 }
 
 .item {
@@ -39,6 +55,11 @@
 
     &:hover {
         color: $primary;
+        cursor: pointer;
+    }
+
+    @media only screen and (min-width: 750px) {
+        font-size: 1rem;
     }
 }
 
