--- a/src/components/Title/title.module.scss
+++ b/src/components/Title/title.module.scss
@@ -6,10 +6,14 @@
 
 .title {
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 6vw;
     color: $primary;
     font-family: 'Permanent Marker', cursive;
     margin: 1rem;
+
+    @media only screen and (min-width: 800px) {
+        font-size: 48px;
+    }
 }
 
 .subtitle {
