--- a/src/components/Job/job.module.scss
+++ b/src/components/Job/job.module.scss
@@ -1,5 +1,5 @@
 @import '../../styles/global';
-
+    
 .company {
     color: $body;
     font-size: 1.3rem;
@@ -7,10 +7,21 @@
     text-transform: uppercase;
     letter-spacing: 0;
     margin: 1rem 0 0 0;
+    @media only screen and (min-width: 1023px) {
+        display: inline;
+        margin-right: 0.5rem;
+
+    }
+}
+
+.container {
+    @media only screen and (min-width: 1023px) {
+        text-align: left;
+    }
 }
 
 
-.role, .skillType{
+.role {
     color: $primary;
     text-transform: uppercase;
     display: block;
@@ -18,6 +29,9 @@
     font-weight: 700;
     letter-spacing: 0; 
     margin: 0; 
+    @media only screen and (min-width: 1023px) {
+        display: inline;
+    }
 }
 
 .details {
@@ -37,4 +51,3 @@
         margin-left: 0.5rem;
     }
 }
-
