--- a/src/pages/resume.module.scss
+++ b/src/pages/resume.module.scss
@@ -19,20 +19,49 @@
     margin: auto;
     @include card;
     text-align: center;
+
+    @media only screen and (min-width: 528px) {
+        width: 475px;
+        margin: 2rem auto;
+    }
+
+    @media only screen and (min-width: 1023px) {
+        width: 700px;
+        padding: 2.5rem 4rem;
+    }
 }
 
 .bulletList {
-    margin-left: 0;
+    margin-left: auto;
+    margin-right: auto;
     text-align: left;
     width: 90%;
+    
     
     > li {
         line-height: 2rem;
         margin-bottom: 0.75rem;
         font-size: 1rem;
+
+        @media only screen and (min-width: 1023px) {
+            margin-right: 0;
+        }
         
     }
+
+    @media only screen and (min-width: 528px) {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @media only screen and (min-width: 1023px) {
+        width: 95%;
+        text-align: left;
+        margin-left: 1rem;
+    }
 }
+
 
 .nav {
     display: none;
@@ -80,7 +109,7 @@
 
 
 .button {
-    margin: 1.5rem auto 2rem;
+    margin: 1.5rem auto 3rem;
     text-align: center;
 }
 
@@ -97,4 +126,8 @@
     color: $primary;
     display: block;
     padding-bottom: 1rem;
+}
+
+.interests {
+    width: 80%;
 }
