--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -7,9 +7,12 @@ h2, h3 {
 }
 
 h2 {
-    color: $secondary;
-    font-weight: 700;
-    font-size: 1.2rem;
+    font-family: $heading-font;
+    font-size: 1.5rem;
+	font-weight: 900;
+    margin: 0 0 0.5rem 0;
+    letter-spacing: 0px;
+    color: $primary;
 }
 
 h3 {
