--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -27,6 +27,13 @@ h3 {
     background-color: $white;
     padding: 1rem 5rem 3rem;
     @include card;
+
+    @media only screen and (min-width: 834px) {
+        width: 800px;
+        padding: 2.5rem 4rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 
